<?xml version="1.0"?>
<package format="2">
  <name>ouster_cloud_filter</name>
  <version>0.0.1</version>
  <description>Ouster LiDAR point cloud filtering</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
